--- a/client/src/pages/Signup.css
+++ b/client/src/pages/Signup.css
@@ -101,10 +101,6 @@ form {
 	align-items: center;
 }
 
-a {
-	text-decoration: none;
-}
-
 .container p {
 	margin: 15px 0;
 	font-size: 14px;
@@ -124,6 +120,7 @@ a {
 	height: 100%;
 	background: #005d60;
 	z-index: 2;
+	border-radius: 150px;
 }
 
 .toggle-panel {
