--- a/client/src/pages/Login.css
+++ b/client/src/pages/Login.css
@@ -10,6 +10,7 @@ body {
 	position: relative;
 	width: 850px;
 	height: 550px;
+	margin: auto;
 	background: #fff;
 	border-radius: 30px;
 	box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
