--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -2,3 +2,36 @@
 html {
 	scroll-behavior: smooth;
 }
+.main-container::before {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	height: 4px;
+	background: linear-gradient(-90deg, #4db6ac, #26a69a, #00897b);
+}
+
+*::-webkit-scrollbar {
+	width: 6px;
+}
+
+*::-webkit-scrollbar-track {
+	background: #f5f5f5;
+	border-radius: 3px;
+}
+
+*::-webkit-scrollbar-thumb {
+	background: #b2dfdb;
+	border-radius: 3px;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+	background: #4db6ac;
+}
+
+/* For Firefox */
+* {
+	scrollbar-width: thin;
+	scrollbar-color: #b2dfdb #f5f5f5;
+}
