--- a/client/src/login/Login.css
+++ b/client/src/login/Login.css
@@ -30,7 +30,7 @@ body {
 	z-index: 1;
 }
 
-form {
+form { 
 	width: 100%;
 }
 
@@ -84,7 +84,7 @@ form {
 .btn {
 	width: 40%;
 	height: 48px;
-	background: #005d60;
+	background: #00bba7;
 	border: none;
 	border-radius: 8px;
 	color: #fff;
@@ -131,7 +131,7 @@ a {
 	width: 50%;
 	height: 100%;
 	left: 0;
-	background: #005d60;
+	background: #00bba7;
 	display: flex;
 	align-items: center;
 	justify-content: center;
