--- a/client/src/login/Logout.css
+++ b/client/src/login/Logout.css
@@ -87,7 +87,7 @@ form{
 }
 
 .forgot-link a{
-    color: #005d60;
+    color: #00bba7;
     text-decoration: none;
     font-size: 16px;
 }   
@@ -95,7 +95,7 @@ form{
 .btn{
     width: 40%;
     height: 48px;
-    background: #005d60;
+    background: #00bba7;
     border: none;
     border-radius: 8px;
     color: #fff;
@@ -139,7 +139,7 @@ a{
     left: -250%;
     width: 300%;
     height: 100%;
-    background: #005d60;
+    background: #00bba7;
     z-index: 2;
     
 }
@@ -149,7 +149,7 @@ a{
     width: 50%;
     height: 100%;
     left: 0;
-    background: #005d60;
+    background: #00bba7;
     display: flex;
     align-items: center;
     justify-content: center;
