--- a/client/src/pages/Login.css
+++ b/client/src/pages/Login.css
@@ -3,7 +3,7 @@ body {
 	justify-content: center;
 	align-items: center;
 	min-height: 100vh;
-	background-color: #cde8ea;
+	background-color: #f0fdfa;
 }
 
 .container {
@@ -77,7 +77,7 @@ form {
 }
 
 .forgot-link a {
-	color: #005d60;
+	color: #009689;
 	text-decoration: none;
 	font-size: 16px;
 }
@@ -85,7 +85,7 @@ form {
 .btn {
 	width: 40%;
 	height: 48px;
-	background: #005d60;
+	background: #009689;
 	border: none;
 	border-radius: 8px;
 	color: #fff;
@@ -123,7 +123,7 @@ a {
 	left: -250%;
 	width: 300%;
 	height: 100%;
-	background: #005d60;
+	background: #009689;
 	z-index: 2;
 }
 
@@ -132,7 +132,7 @@ a {
 	width: 50%;
 	height: 100%;
 	left: 0;
-	background: #005d60;
+	background: #009689;
 	display: flex;
 	align-items: center;
 	justify-content: center;
